<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rrdl.crt.unconsciousness">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un0"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un1"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/breath" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un2"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/safety" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un3"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/inform" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un4"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/verif" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un5"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un6"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un7"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/tilt" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/tilt2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un8"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un9"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un10"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/fir" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un11"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sec" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un12"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/thir" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un13"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/fort" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un14"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/fifth" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un15"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sev" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/un16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/un16"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
