<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rrdl.crt.step1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi0"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/verif" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/bi1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bi1"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi5"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/lie" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/bi2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi6"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/inform" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/bi3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi3"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi7"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/pressur" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

                <TextView
                    android:id="@+id/bi4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bi4"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="47dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
